application/02-app-ingress.yaml
# kubectl --kubeconfig $(pwd)/kubeconfig apply -f test-ingress.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-ingress
  labels:
    app: app-ingress
  namespace: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-ingress
  template:
    metadata:
      labels:
        app: app-ingress
    spec:
      containers:
      - name: app-ingress
        image: gcr.io/google-samples/hello-app:1.0
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: app-ingress-service
  namespace: application
spec:
  selector:
    app: app-ingress
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-ingress-echo
  labels:
    app: app-ingress-echo
  namespace: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-ingress-echo
  template:
    metadata:
      labels:
        app: app-ingress-echo
    spec:
      containers:
      - name: app-ingress-echo
        image: ealen/echo-server:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: app-ingress-echo-service
  namespace: application
spec:
  selector:
    app: app-ingress-echo
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: application
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: app-ingress-service
            port:
              number: 80
  - http:
      paths:
      - path: /echo
        pathType: Prefix
        backend:
          service:
            name: app-ingress-echo-service
            port:
              number: 80

#kubectl wait --for=condition=available --timeout=300s deployment/app-ingress -n application
#kubectl wait --for=condition=available --timeout=300s deployment/app-ingress-echo -n application
