application/02-ingress-example.yaml
# kubectl --kubeconfig $(pwd)/kubeconfig apply -f test-ingress.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-example
  labels:
    app: ingress-example
  namespace: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-example
  template:
    metadata:
      labels:
        app: ingress-example
    spec:
      containers:
      - name: ingress-example
        image: gcr.io/google-samples/hello-app:1.0
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-example-service
  namespace: application
spec:
  selector:
    app: ingress-example
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-example-echo
  labels:
    app: ingress-example-echo
  namespace: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-example-echo
  template:
    metadata:
      labels:
        app: ingress-example-echo
    spec:
      containers:
      - name: ingress-example-echo
        image: ealen/echo-server:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-example-echo-service
  namespace: application
spec:
  selector:
    app: ingress-example-echo
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-example
  namespace: application
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: ingress-example-service
            port:
              number: 80
  - http:
      paths:
      - path: /echo
        pathType: Prefix
        backend:
          service:
            name: ingress-example-echo-service
            port:
              number: 80

#kubectl wait --for=condition=available --timeout=300s deployment/ingress-example -n application
#kubectl wait --for=condition=available --timeout=300s deployment/ingress-example-echo -n application
