application/05-spring-prometheus.yaml
# deployment, service and ingress for image ghcr.io/samitkumarpatel/spring-prometheus:110820252156-native

apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-prometheus
  namespace: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-prometheus
  template:
    metadata:
      labels:
        app: spring-prometheus
      annotations:
        prometheus.io/scrape: "true"      # Enable metrics scraping
        prometheus.io/port: "8080"        # Port where metrics are exposed
        prometheus.io/path: "/actuator/prometheus"  # Path to metrics endpoint (optional, defaults to /metrics)
    spec:
      containers:
      - name: spring-prometheus
        image: ghcr.io/samitkumarpatel/spring-prometheus:110820252156-native
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: spring-prometheus
  namespace: application
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: spring-prometheus
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-prometheus
  namespace: application
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /spring-prometheus(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: spring-prometheus
            port:
              name: http
